gcc/testsuite/g++.dg/ext/is_class_error.C
// PR c++/33212

template<int> void foo()
{
  __is_class((int); // { dg-error "type-specifier|primary-expression" }
}
